add login, signup page, more assets

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <!-- header maker -->
-    <header class="wraper-bg">
-        <div class="header-outer">
+    <!-- div maker -->
+    <div class="wraper-bg">
+        <div class="div-outer">
             <div class="container outer-wraper">
                 <div class="slogan">
                     <h1>Hiền</h1>
@@ -46,13 +46,12 @@
                     </div>
                 </div>
             </div>
-        </div>
-            
-    </header class="wraper wraper-bg">
+        </div>            
+    </div>
     <main class="container">
         <section class="info">
             <div class="row">
-
+                bảng vàng
             </div>
         </section>
         <section class="rank">
