--- a/signup.html
+++ b/signup.html
@@ -25,14 +25,17 @@
                             </div>
                             <div class="nb-card-body">
                                 <form>
+                                    <input type="text" class="normal-input" placeholder="Họ và Tên lót">
+                                    <input type="text" class="normal-input" placeholder="Tên">
+                                    <input type="text" class="normal-input" placeholder="Email">
                                     <input type="text" class="normal-input" placeholder="tài khoản">
                                     <input type="password" class="normal-input" placeholder="mật khẩu">
-                                    <input type="submit" value="Đăng nhập" />
-                                    <div><a href=#>Quên mật khẩu?</a></div>
+                                    <input type="password" class="normal-input" placeholder="Gõ lại mật khẩu">
+                                    <input type="submit" value="Đăng ký ngay" />
                                 </form>
                             </div>
                             <div class="nb-card-foot">
-                                    <div>Chưa có tài khoản? <a href=#>Đăng ký ngay</a></div>
+                                    <div>Đã có tài khoản? <a href=#>Đăng nhập</a></div>
 
                             </div>
                         </div>
@@ -43,7 +46,7 @@
             </div>
         </div>
 
-    </div>
+    </div >
     <main class="container">
         <section class="info">
             <div class="row">
