--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="./assets/styles/styles.css">
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 </head>
 
 <body>
     <!-- div maker -->
+    
     <div class="wraper-bg">
         <div class="div-outer">
             <div class="container outer-wraper">
@@ -41,7 +43,6 @@
                                     <li class="btn second"><a href=#>Lịch thi</a></li>
                                 </ul>
                             </li>
-
                         </ul>
                     </div>
                 </div>
