--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Document</title>
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="./assets/styles/styles.css">
+    <link rel="stylesheet" href="./assets/styles/partials.css">
+
     <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap-grid.css" />
 </head>
@@ -15,6 +17,43 @@
 <body>
     <!-- div maker -->
     <div class="wraper-bg">
+        <!--Desktop Nav bar-->
+        <nav class="nav-desktop ">
+            <div class="container">
+                <div class="logo-area">
+                    <a href="./index.html">
+                        <div class="logo">
+                            <img src="../assets/img/resources/logo.png" alt="">
+                        </div>
+                        <div class="web-name">
+                            Kỳ thi Hương Quốc gia
+                        </div>
+                    </a>
+                </div>
+                <div class="menu-bar">
+                    <ul class="main-nav">
+                        <li>
+                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__rank img-rounded" href="#"> Rank</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div class="div-outer">
             <div class="container outer-wraper">
                 <div class="slogan">
@@ -49,29 +88,100 @@
         </div>
     </div>
     <main class="container">
-            <section href="golden-rank" class="row">
-                <div style="height: 500px;" class="col-12 golden-rank justify-content-center">
-                        <div class="king-paper">
-                                <img src="assets/img/bang-vang/tc-ngang-vang.png">
-                                <span class="title">Bảng vàng</span>
+        <section href="golden-rank" class="row">
+            <div class="col-12">
+                <div class="golden-rank justify-content-center">
+                    <div class="king-paper">
+                        <img src="assets/img/bang-vang/tc-ngang-vang.png">
+                        <span class="title">Bảng vàng</span>
+                    </div>
+                    <div class="user-rank">
+                        <div>
+                            Danh sách các thí sinh đỗ đạt làm quan
                         </div>
-                       <div class="user-rank">
                         <table>
                             <thead>
-                                
+                                <tr>
+                                    <th>STT</th>
+                                    <th>Họ tên</th>
+                                    <th>Quê quán</th>
+                                    <th>Tổng điểm</th>
+                                </tr>
+
                             </thead>
                             <tbody>
                                 <tr>
-                                    <td>Hello</td>
+                                    <td>1</td>
+                                    <td>Nguyễn Niê Đức Thịnh</td>
+                                    <td>Đăk Lăk</td>
+                                    <td>100</td>
+                                </tr>
+                                <tr>
+                                    <td>2</td>
+                                    <td>Trần Bảo An</td>
+                                    <td>Hà Giang</td>
+                                    <td>98</td>
+                                </tr>
+                                <tr>
+                                    <td>3</td>
+                                    <td>Lê Trung Đại</td>
+                                    <td>Lào Cai</td>
+                                    <td>94</td>
+                                </tr>
+                                <tr>
+                                    <td>4</td>
+                                    <td>Nguyễn Hoàng Quân</td>
+                                    <td>Bình Định</td>
+                                    <td>89</td>
+                                </tr>
+                                <tr>
+                                    <td>5</td>
+                                    <td>Đặng Bảo Chương</td>
+                                    <td>TP HCM</td>
+                                    <td>88</td>
+                                </tr>
+                                <tr>
+                                    <td>6</td>
+                                    <td>Đỗ Quang Hải Minh</td>
+                                    <td>Bắc Ninh</td>
+                                    <td>88</td>
+                                </tr>
+                                <tr>
+                                    <td>7</td>
+                                    <td>Lê Vũ Hải</td>
+                                    <td>Gia Lai</td>
+                                    <td>85</td>
+                                </tr>
+                                <tr>
+                                    <td>8</td>
+                                    <td>Y Quân Kbuôr</td>
+                                    <td>Đăk Lăk</td>
+                                    <td>80</td>
+                                </tr>
+                                <tr>
+                                    <td>9</td>
+                                    <td>Đào Thị Tuyết</td>
+                                    <td>Thừa Thiên Huế</td>
+                                    <td>79</td>
+                                </tr>
+                                <tr>
+                                    <td>10</td>
+                                    <td>Nông Hoàng Anh</td>
+                                    <td>Cao Bằng</td>
+                                    <td>77</td>
                                 </tr>
                             </tbody>
                         </table>
-                       </div>
+                        <div>
+                            Hello
+                        </div>
+                    </div>
                 </div>
-                
-                <div>
-                </div>
-            </section>
+            </div>
+
+            <div>
+            </div>
+        </section>
         <section class="rank">
 
         </section>
