hidden nav bar when reach small screen

--- a/login.html
+++ b/login.html
@@ -15,6 +15,46 @@
 <body>
     <!-- div maker -->
     <div class="wraper-bg">
+        <!--Desktop Nav bar-->
+        <nav class="nav-desktop ">
+            <div class="container">
+                <div class="logo-area">
+                    <a href="./index.html">
+                        <div class="logo">
+                            <img src="../assets/img/resources/logo.png" alt="">
+                        </div>
+                        <div class="web-name">
+                            Kỳ thi Hương Quốc gia
+                        </div>
+                    </a>
+                </div>
+                <div class="menu-bar">
+                    <ul class="main-nav">
+                        <li>
+                            <a class="main-nav__home img-rounded" href="#">Home</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__rank img-rounded" href="#"> Rank</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                        </li>
+                        <li>
+                            <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+    </div>
+    <div class="wraper-bg">
         <div class="div-outer">
             <div class="container outer-wraper outer-wraper-100vh justify-content-center">
                 <div class="row">
@@ -32,7 +72,7 @@
                                 </form>
                             </div>
                             <div class="nb-card-foot">
-                                    <div>Chưa có tài khoản? <a href=#>Đăng ký ngay</a></div>
+                                <div>Chưa có tài khoản? <a href=#>Đăng ký ngay</a></div>
 
                             </div>
                         </div>
