generate question function

--- a/exam.html
+++ b/exam.html
@@ -60,7 +60,7 @@
             <div class="col-12">
                 <div class="row">
                     <div class="col-lg-9 col-md-12 exam">
-                        <div id="Q1" class="question-item">
+                        <!-- <div id="Q1" class="question-item">
                             <div class="question">
                                 <span class="question-numer">Câu 1</span>
                                 <span class="question-text">Số nào lớn nhất?</span>
@@ -257,10 +257,13 @@
                                     Hòa Bình
                                 </label>
                             </div>
+                        </div> -->
+                        <div id="questions-place">
+
                         </div>
                     </div>
                     <div class="col-lg-3 exam-manager">
-                        <div class="btn-close">x</div>
+                        <div class="btn-close">x    </div>
                         <div class="timer-area">
                             <span>Thời gian: </span>
                             <span id="clock" class="timer" ></span>
@@ -284,6 +287,8 @@
   <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
   <script src="assets/js/exam-page/countdown.js"></script>
   <script src="assets/js/exam-page/load-flag.js"></script>
+  <script src="assets/js/exam-page/test-load.js"></script>
+
     <footer>
         Powered by thinhnnd & thupx
     </footer>
