--- a/dashboard.html
+++ b/dashboard.html
@@ -27,7 +27,7 @@
                 <div class="container-fluid">
                     <div class="header-mobile-inner">
                         <a class="logo" href="index.html">
-                            <img src="images/tauchuong/logo.png" width="70px" height="70px" alt="">
+                            <img src="assets/img/resources/logo.png" width="70px" height="70px" alt="">
                         </a>
                         <button class="hamburger hamburger--slider" type="button">
                             <span class="hamburger-box">
@@ -54,7 +54,7 @@
         <aside class="menu-sidebar d-none d-lg-block">
             <div class="logo">
                 <a href="#">
-                    <img src="./images/tauchuong/logo.png" width="70px" height="70px" alt="">
+                    <img src="assets/img/resources/logo.png" width="70px" height="70px" alt="">
                 </a>
             </div>
             <div class="menu-sidebar__content js-scrollbar1">
@@ -88,7 +88,7 @@
                                 <div class="account-wrap">
                                     <div class="account-item clearfix js-item-menu">
                                         <div class="image">
-                                            <img src="images/tauchuong/logo.png" alt="User" />
+                                            <img src="assets/img/resources/logo.png" alt="User" />
                                         </div>
                                         <div class="content">
                                             <a class="js-acc-btn" href="#">admin</a>
@@ -97,7 +97,7 @@
                                             <div class="info clearfix">
                                                 <div class="image">
                                                     <a href="#">
-                                                        <img src="images/tauchuong/logo.png" alt="John Doe" />
+                                                        <img src="assets/img/resources/logo.png" alt="John Doe" />
                                                     </a>
                                                 </div>
                                                 <div class="content">
