--- a/login.html
+++ b/login.html
@@ -23,18 +23,18 @@
                         <div class="logo">
                             <img src="../assets/img/resources/logo.png" alt="">
                         </div>
-                        <div class="web-name">
+                        <div class="web-name noselect">
                             Kỳ thi Hương Quốc gia
                         </div>
                     </a>
                 </div>
-                <div class="menu-bar">
+                <div class="menu-bar noselect">
                     <ul class="main-nav">
                         <li>
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="#"> Rank</a>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
@@ -49,7 +49,31 @@
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
                     </ul>
+                    <ul id="mySidenav" class="main-nav-mob">
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <li>
+                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                            </li>
+                        </ul>            
                 </div>
+                <div id="btn-open-menu" class="btn-menu">
+                        <img src="./assets/icons/three-dot-menu.png">
+                    </div>
             </div>
         </nav>
 
@@ -88,6 +112,10 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="./assets/js/navigation.js">
+    </script>
 </body>
 
 </html>
