--- a/signup.html
+++ b/signup.html
@@ -22,12 +22,12 @@
                         <div class="logo">
                             <img src="../assets/img/resources/logo.png" alt="">
                         </div>
-                        <div class="web-name">
+                        <div class="web-name noselect">
                                 Kỳ thi Hương Quốc gia
                         </div>
                     </a>
                 </div>
-                <div class="menu-bar">
+                <div class="menu-bar noselect">
                     <ul class="main-nav">
                         <li>
                             <a class="main-nav__home img-rounded" href="#">Home</a>
@@ -48,7 +48,31 @@
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
                         </li>
                     </ul>
+                    <ul id="mySidenav" class="main-nav-mob">
+                            <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+                            <li>
+                                <a class="main-nav__home img-rounded" href="#">Home</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__rank img-rounded" href="#golden-rank"> Rank</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            </li>
+                            <li>
+                                <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
+                            </li>
+                        </ul>
                 </div>
+                <div id="btn-open-menu" class="btn-menu">
+                        <img src="./assets/icons/three-dot-menu.png">
+                    </div>
             </div>
         </nav>
     </div>
@@ -90,6 +114,8 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
+    <script src="./assets/js/navigation.js">
+    </script>
 </body>
 
 </html>
