--- a/login.html
+++ b/login.html
@@ -96,7 +96,7 @@
                                 </form>
                             </div>
                             <div class="nb-card-foot">
-                                <div>Chưa có tài khoản? <a href=#>Đăng ký ngay</a></div>
+                                <div>Chưa có tài khoản? <a href='./signup.html'>Đăng ký ngay</a></div>
 
                             </div>
                         </div>
