change some things

--- a/exam.html
+++ b/exam.html
@@ -37,16 +37,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
+                            <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -58,16 +58,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
+                            <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -166,8 +166,8 @@
             </div>
         </div>
     </main>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+
     <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
     <!-- <script src="assets/js/exam-page/countdown.js"></script>
   <script src="assets/js/exam-page/load-flag.js"></script> -->
