--- a/signup.html
+++ b/signup.html
@@ -33,16 +33,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="#"> Rank</a>
+                            <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -54,16 +54,16 @@
                                 <a class="main-nav__home img-rounded" href="#">Home</a>
                             </li>
                             <li>
-                                <a class="main-nav__rank img-rounded" href="#golden-rank"> Rank</a>
+                                <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                             </li>
                             <li>
-                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
+                                <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
                             </li>
                             <li>
-                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                                <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
                             </li>
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -114,8 +114,8 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+
     <script src="./assets/js/navigation.js">
     </script>
 </body>
