add animation and more

--- a/select-exam.html
+++ b/select-exam.html
@@ -36,16 +36,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
+                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -57,16 +57,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="./exam.html"> Vào thi</a>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả</a>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">BXH</a>
+                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -137,119 +137,119 @@
                 <h3> <span class="note">Chú ý:</span> Thí sinh <strong>chỉ</strong> được chọn 1 đề thi bên dưới</h3>
                 <ul>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>123</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>342</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>251</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>324</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>485</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>512</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>642</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>701</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>888</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>894</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
                         </a>
                     </li>
                     <li>
-                        <a href="./exam.html">
+                        <a href="#">
                             <div class="nb-card select-exam">
                                 Mã đề <strong>921</strong>
                             </div>
@@ -262,7 +262,8 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
-    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="./assets/js/navigation.js">
     </script>
 </body>
