--- a/index.html
+++ b/index.html
@@ -37,16 +37,16 @@
                             <a class="main-nav__home img-rounded" href="#">Home</a>
                         </li>
                         <li>
-                            <a class="main-nav__rank img-rounded" href="./select-exam.html"> Vào thi</a>
+                            <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                         </li>
                         <li>
                             <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                         </li>
                         <li>
-                            <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả thi</a>
+                            <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">Bảng xếp hạng</a>
+                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -58,16 +58,16 @@
                                 <a class="main-nav__home img-rounded" href="#">Home</a>
                             </li>
                             <li>
-                                <a class="main-nav__rank img-rounded" href="./select-exam.html"> Vào thi</a>
+                                <a class="main-nav__rank img-rounded" href="/index.html#golden-rank"> Rank</a>
                             </li>
                             <li>
                                 <a class="main-nav__lib img-rounded" href="#">Thư viện</a>
                             </li>
                             <li>
-                                <a class="main-nav__event img-rounded" href="./my-result.html">Kết quả thi</a>
+                                <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
                             <li>
-                                <a class="main-nav__exam img-rounded" href="/index.html#golden-rank">Bảng xếp hạng</a>
+                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -97,7 +97,7 @@
                     <div class="col-lg-3">
                         <ul class="btn-join">
                             <li class="btn first">
-                                <a href='./select-exam.html'>Vào Thi</a>
+                                <a href='./login.html'>Vào Thi</a>
                             </li>
                             <li>
                                 <ul class="wrap-btn">
@@ -214,14 +214,16 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
-    <script src="./bower_components/jquery/dist/jquery.min.js"></script>
-
+    <script
+    src="http://code.jquery.com/jquery-3.3.1.min.js"
+    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+    crossorigin="anonymous"></script>
     <script src="assets/js/exam-page/mobile-menu-close.js"></script>
     <script src="./assets/js/navigation.js">
     </script>
-     <!-- <script src="./assets/js/change-bg.js">
+     <script src="./assets/js/change-bg.js">
      </script>
-     -->
+    
 </body>
 
 </html>
