add animation, smother

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <!-- div maker -->
-    <div class="wraper-bg">
+    <div id="wraper-animation" class="wraper-bg">
         <!--Desktop Nav bar-->
         <nav class="nav-desktop ">
             <div class="container">
@@ -221,6 +221,8 @@
     <script src="assets/js/exam-page/mobile-menu-close.js"></script>
     <script src="./assets/js/navigation.js">
     </script>
+     <script src="./assets/js/change-bg.js">
+     </script>
     
 </body>
 
