--- a/exam.html
+++ b/exam.html
@@ -166,8 +166,8 @@
             </div>
         </div>
     </main>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
     <script src="/bower_components/jquery.countdown/dist/jquery.countdown.js"></script>
     <!-- <script src="assets/js/exam-page/countdown.js"></script>
   <script src="assets/js/exam-page/load-flag.js"></script> -->
