--- a/index.html
+++ b/index.html
@@ -215,9 +215,7 @@
         Powered by thinhnnd & thupx
     </footer>
     <script
-    src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="assets/js/exam-page/mobile-menu-close.js"></script>
     <script src="./assets/js/navigation.js">
     </script>
