--- a/select-exam.html
+++ b/select-exam.html
@@ -262,8 +262,8 @@
     <footer>
         Powered by thinhnnd & thupx
     </footer>
-    <script src="http://code.jquery.com/jquery-3.3.1.min.js"
-    integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+
     <script src="./assets/js/navigation.js">
     </script>
 </body>
