Change vao thi href=./exam.html

--- a/my-result.html
+++ b/my-result.html
@@ -46,7 +46,7 @@
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -67,7 +67,7 @@
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
                             <li>
-                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
