--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="logo-area">
                     <a href="./index.html">
                         <div class="logo">
-                            <img src="../assets/img/resources/logo.png" alt="">
+                            <img src="./assets/img/resources/logo.png" alt="">
                         </div>
                         <div class="web-name noselect">
                             Kỳ thi Hương Quốc gia
@@ -46,7 +46,7 @@
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -67,7 +67,7 @@
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
                             <li>
-                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -97,7 +97,7 @@
                     <div class="col-lg-3">
                         <ul class="btn-join">
                             <li class="btn first">
-                                <a href='./login.html'>Vào Thi</a>
+                                <a href='./exam.html'>Vào Thi</a>
                             </li>
                             <li>
                                 <ul class="wrap-btn">
