--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
                             <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                         </li>
                         <li>
-                            <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                            <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                         </li>
                         <li>
                             <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
@@ -64,7 +64,7 @@
                                 <a class="main-nav__event img-rounded" href="#"> Sự kiện</a>
                             </li>
                             <li>
-                                <a class="main-nav__exam img-rounded" href="#">Vào thi</a>
+                                <a class="main-nav__exam img-rounded" href="./exam.html">Vào thi</a>
                             </li>
                             <li>
                                 <a class="main-nav__contact img-rounded " href="#">Liên hệ</a>
