add manager button for exam.html

--- a/exam.html
+++ b/exam.html
@@ -138,9 +138,9 @@
 
                         </div>
                     </div>
-                    <div class="col-lg-3 ">
+                    <div class="col-lg-3">
                         <div class="exam-manager">
-                            <div id="close-manager" class="btn-close">x </div>
+                            <div id="close-manager"  class="btn-close"><span><img src="./assets/icons/icons8-timer-30.png"></span></div>
                             <div class="timer-area">
                                 <span>Thời gian: </span>
                                 <span id="clock" class="timer"></span>
